# opportunity-scout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/opportunity_scout/: __main__.py  batch.py  collector.py  ebay.py  etsy.py  feeds.py  ifixit.py  models.py  multisource.py  pipeline.py  reporting.py  run_feed.py  run_ifixit.py  run_marketplace.py  run_stackexchange.py  scoring.py  scraper.py  searches.py  stackexchange.py
tests/: test_feeds.py  test_ifixit.py  test_pipeline.py  test_reporting.py  test_scoring.py  test_scraper.py
