[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "opportunity-scout"
version = "0.1.0"
description = "Find and rank niche 3D-printable replacement-part opportunities."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15,<5",
    "httpx>=0.28,<1",
    "pydantic>=2.13,<3",
    "python-dotenv>=1.2,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
]

[project.scripts]
opportunity-scout = "opportunity_scout.__main__:main"
opportunity-scout-ifixit = "opportunity_scout.run_ifixit:main"
opportunity-scout-batch = "opportunity_scout.batch:main"
opportunity-scout-stackexchange = "opportunity_scout.run_stackexchange:main"
opportunity-scout-all = "opportunity_scout.multisource:main"
opportunity-scout-marketplace = "opportunity_scout.run_marketplace:main"

[tool.setuptools.packages.find]
where = ["src"]
